# INFT2503

./: .gitignore
oving1/: CMakeLists.txt  oppgaveA.cpp  oppgaveB.cpp
oving2/: CMakeLists.txt  main.cpp  oppgave4.cpp  oppgave5.cpp  oppgave6.cpp  pointers.drawio
oving3/: CMakeLists.txt  commodity.cpp  commodity.hpp  oppgave12.cpp  oppgave3.cpp  oppgave4.cpp
oving4/: CMakeLists.txt  main.cpp
oving5/: CMakeLists.txt  main.cpp
oving6/: CMakeLists.txt  ChessBoard.cpp  ChessBoard.hpp  ChessBoardPrint.cpp  ChessBoardPrint.hpp  main.cpp  webserver.cpp
